syntax = "proto3";

package api.option.v1;

import "google/protobuf/descriptor.proto";

option go_package = "github.com/nokamoto/2pf23/pkg/api/option/v1;optionv1";

message Resource {
  extend google.protobuf.FieldOptions {
    // usage is usage of the field in the CLI.
    string usage = 50000;
  }
  extend google.protobuf.MessageOptions {
    // ent_query is a flag to generate ent query code.
    bool ent_query = 50001;
  }
}
